# docsalud-mx

./: .env.example  .gitignore  .pre-commit-config.yaml  AWS_DEPLOY.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
backend/app/: config.py  dependencies.py  main.py
backend/app/api/middleware/: __init__.py  cors.py  logging.py  rate_limit.py
backend/app/api/v1/: router.py
backend/app/core/ml/: __init__.py  anomaly_detector.py  document_classifier.py  model_registry.py  (+3 more)
backend/app/db/: database.py  models.py
backend/app/services/: __init__.py  alert_service.py  document_service.py  patient_service.py  search_service.py
backend/app/utils/: logger.py  scraper.py
backend/data/reference/: cie10_codes.json  lab_ranges.json  medications.json
backend/notebooks/: 01_ocr_exploration.ipynb  03_classifier_training.ipynb  04_clustering_analysis.ipynb
backend/scripts/: generate_synthetic_data.py  train_ner_model.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_alerts_endpoint.py  test_health_endpoint.py  test_patients_endpoint.py  test_search_query_endpoint.py  test_upload_endpoint.py
backend/tests/unit/: test_anomaly_detector.py  test_classifier.py  test_feature_engineering.py  test_model_registry.py  test_ner_extractor.py  test_ocr_extractor.py  test_ocr_preprocessor.py  test_risk_clusterer.py  test_scraper.py  test_sklearn_classifier.py  test_text_cleaner.py
(+91 files in other folders)
